seedboxk8s/applications/transmission/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - image: registry.${clusterTld}/tortuga/transmission:latest
          name: transmission
          securityContext:
            runAsUser: ${plexUid}
            runAsGroup: ${plexGid}
          ports:
            - containerPort: 9091
            - containerPort: ${transmissionPeerPort}
              protocol: TCP
            - containerPort: ${transmissionPeerPort}
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: transmission-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: transmission-config-pvc
          persistentVolumeClaim:
            claimName: transmission-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
