seedboxk8s/applications/transmission/Pod.test.yaml
# Copyright (c) Tailscale Inc & AUTHORS
# SPDX-License-Identifier: BSD-3-Clause
apiVersion: v1
kind: Pod
metadata:
  name: transmission-test
  namespace: tortuga
spec:
  containers:
  - name: test
    image: busybox
    command: ["/bin/sh", "-c", "echo ${THING_ONE}; sleep 3600;"]
    restartPolicy: Never
