seedboxk8s/applications/transmission/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  namespace: tortuga
spec:
  replicas: 1
  serviceName: transmission
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-transmission/releases
        - image: lscr.io/linuxserver/transmission:4.0.6-r4-ls294
          name: transmission
          ports:
            - containerPort: 9091
            - containerPort: ${transmissionPeerPort}
              protocol: TCP
            - containerPort: ${transmissionPeerPort}
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: transmission-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: transmission-config-pvc
          persistentVolumeClaim:
            claimName: transmission-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
