seedboxk8s/applications/transmission/Service.http.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-http
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: transmission
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9091
