seedboxk8s/applications/transmission/Service.torrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-torrent
  namespace: tortuga
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: transmission
  ports:
  - name: transmission-torrent-tcp
    protocol: TCP
    port: ${transmissionPeerPort}
    targetPort: ${transmissionPeerPort}
  - name: transmission-torrent-udp
    protocol: UDP
    port: ${transmissionPeerPort}
    targetPort: ${transmissionPeerPort}
