seedboxk8s/applications/transmission/IngressRoute.http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-http
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Transmission
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: transmission
    gethomepage.dev/href: https://transmission.${productionClusterFqdn}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=transmission
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: transmission-http
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
