seedboxk8s/applications/transmission/IngressRouteTCP.torrent.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: torrent-tcp
  namespace: tortuga
spec:
  ingressClassName: traefik-localnet
  entryPoints:
    - torrent-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: transmission-torrent
          port: ${transmissionPeerPort}
